--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:textSize="11.5dp" />
 
         <TextView
+            android:id="@+id/ip_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100.99.205.118"
