--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/jump_main2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
