网络请求类

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:textSize="11.5dp" />
 
         <EditText
+            android:id="@+id/number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -75,6 +76,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/all"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -95,6 +97,7 @@
             android:orientation="horizontal">
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="成功次数"
@@ -106,6 +109,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/success_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -140,6 +144,7 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="开平-有声听书"
                 android:textSize="11.5dp" />
 
@@ -147,18 +152,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="翻译官"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="指南针"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="安达测距"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
 
@@ -172,18 +180,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="记忆拼图"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="安达录音机"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="自选壁纸"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
 
@@ -196,18 +207,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="母婴护理大全"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="聊天学英语"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="全国公交查询"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
     </LinearLayout>
@@ -234,6 +248,7 @@
                 android:textSize="11.5dp" />
 
             <EditText
+                android:id="@+id/once_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -250,10 +265,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="间隔使劲按"
+                android:text="间隔时间"
                 android:textSize="11.5dp" />
 
             <EditText
+                android:id="@+id/once_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -283,6 +299,7 @@
             android:textSize="11.5dp" />
 
         <EditText
+            android:id="@+id/                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            "
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -386,24 +403,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="开平-有声听书"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="翻译官"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="指南针"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="安达测距"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
 
@@ -417,18 +438,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="记忆拼图"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="安达录音机"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="自选壁纸"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
 
@@ -441,18 +465,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="母婴护理大全"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="聊天学英语"
+                android:checked="true"
                 android:textSize="11.5dp" />
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="全国公交查询"
+                android:checked="true"
                 android:textSize="11.5dp" />
         </LinearLayout>
     </LinearLayout>
@@ -466,5 +493,5 @@
         android:id="@+id/start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="开启" />
+        android:text="开始" />
 </LinearLayout>
