--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -299,7 +299,7 @@
             android:textSize="11.5dp" />
 
         <EditText
-            android:id="@+id/                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            "
+            android:id="@+id/ip_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -327,6 +327,7 @@
                 android:textSize="11.5dp" />
 
             <EditText
+                android:id="@+id/a_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -347,6 +348,7 @@
                 android:textSize="11.5dp" />
 
             <EditText
+                android:id="@+id/b_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -367,6 +369,7 @@
                 android:textSize="11.5dp" />
 
             <EditText
+                android:id="@+id/show_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
